--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   </head>
  
   <body>
-    <div>
-        <img src="images/c.jpg" alt="profile image" />
-        <h2>Angga Pratama</h2>
+    <div id="profile_container">
+        <img id="profile-image" src="images/c.jpg" alt="profile image" />
+        <h2 id="profile-name"> Angga Pratama</h2>
      </div>
   </body>
  
