--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
  
   <body>
+    <div id="header">Header</div>
     <div id="profile_container">
         <img id="profile-image" src="images/c.jpg" alt="profile image" />
         <h2 id="profile-name"> Angga Pratama</h2>
